DOM squish fix

--- a/public/styles/pdf-export.css
+++ b/public/styles/pdf-export.css
@@ -13,8 +13,6 @@ html, body {
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
-  width: 190mm;
-  margin: 0 auto;
 }
 /*  SANS FONT LOCATION */
 
